--- a/plugins/lcnaf/frontend/views/lcnaf_search/index.html.erb
+++ b/plugins/lcnaf/frontend/views/lcnaf_search/index.html.erb
@@ -19,7 +19,11 @@
           <div id="results"></div>
         </div>
         <div class="span4">
-          <div id="selected" data-spy="affix"></div>
+          <div class="selected-container" data-spy="affix">
+            <div class="alert alert-info">No Results Selected</div>
+            <div id="selected"></div>
+            <button id="import-selected" class="btn btn-primary" disabled="disabled">Import Selected</button>
+          </div>
         </div>
       </div>
     </div>
