--- a/frontend/app/views/shared/_header_user.html.erb
+++ b/frontend/app/views/shared/_header_user.html.erb
@@ -35,12 +35,14 @@
     </ul>
   </li>
 
-  <% if Plugins.system_menu_items? %>
+  <% if Plugins.system_menu_items.any? {|plugin| has_permission_for_controller?(session, plugin)} %>
     <li class="dropdown plugin-container">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= I18n.t("navbar.plugins") %> <b class="caret"></b></a>
       <ul class="dropdown-menu">
         <% Plugins.system_menu_items.each do |plugin| %>
-          <li><%= link_to I18n.t("plugins.#{plugin}.label"), :controller => plugin.intern, :action => :index %></li>
+          <% if has_permission_for_controller?(session, plugin) %>
+            <li><%= link_to I18n.t("plugins.#{plugin}.label"), :controller => plugin.intern, :action => :index %></li>
+          <% end %>
         <% end %>
       </ul>
     </li>
