add a special converter for MARC from LCNAF

--- a/frontend/app/views/jobs/_form.html.erb
+++ b/frontend/app/views/jobs/_form.html.erb
@@ -13,7 +13,7 @@
   <% define_template("job", jsonmodel_definition(:job)) do |form| %>
     <section>
       <fieldset>
-        <%= form.label_and_select "import_type", form.possible_options_for("import_type", true) %>
+        <%= form.label_and_select "import_type", form.possible_options_for("import_type", true).reject{|option_arr| option_arr[1] === 'marcxml_lcnaf_subjects_and_agents'} %>
       </fieldset>
     </section>
     <hr/>
