add a sortable identifier column to resources index

--- a/frontend/app/views/resources/index.html.erb
+++ b/frontend/app/views/resources/index.html.erb
@@ -2,6 +2,7 @@
 
 <%
    @show_multiselect_column = user_can?("delete_archival_record")
+   add_column(I18n.t("resource.identifier"), proc {|record| record['identifier']}, :sortable => true, :sort_by => "identifier")
 %>
 
 <div class="row-fluid">
