--- a/public/app/assets/stylesheets/archivesspace.less
+++ b/public/app/assets/stylesheets/archivesspace.less
@@ -4,3 +4,4 @@
 @import "archivesspace/common";
 @import "archivesspace/header";
 @import "archivesspace/record_tree";
+@import "archivesspace/embedded_files";
