WIP Add some digital object RDE bits...

--- a/frontend/app/views/shared/_tree.html.erb
+++ b/frontend/app/views/shared/_tree.html.erb
@@ -40,6 +40,10 @@
         :action_label =>  I18n.t("digital_object._frontend.action.add_child"),
         :record_label => I18n.t("digital_object_component._singular")
       },
+      :rapid_data_entry => {
+        :type => :digital_object_component,
+        :action_label =>  I18n.t("digital_object._frontend.action.rapid_data_entry")
+      },
       :can_accept_paste_from_clipboard => :archival_object
     },
     :digital_object_component => {
@@ -52,6 +56,10 @@
         :type => :digital_object_component,
         :action_label =>  I18n.t("digital_object_component._frontend.action.add_sibling"),
         :record_label => I18n.t("digital_object_component._singular")
+      },
+      :rapid_data_entry => {
+        :type => :digital_object_component,
+        :action_label =>  I18n.t("digital_object._frontend.action.rapid_data_entry")
       },
       :can_move => true,
       :can_accept_paste_from_clipboard => :archival_object,
