First crack at DO RDE - still duplication and refactor required

--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -166,6 +166,7 @@
   </tr>
 <% end %>
 
+<%= stylesheet_link_tag "jquery.kiketable.colsizable.css" %>
 <%= stylesheet_link_tag "archivesspace/rde" %>
 <div class="rde-wrapper">
   <div class="modal-body">
