--- a/frontend/app/views/digital_object_components/_rde.html.erb
+++ b/frontend/app/views/digital_object_components/_rde.html.erb
@@ -13,6 +13,106 @@
         <div class="error-summary-list"></div>
       </div>
     </td>
+
+    <!-- BASIC INFORMATION -->
+    <td class="control-group"><%= form.textfield "label" %></td>
+    <td class="control-group"><%= form.textfield "title" %></td>
+    <td class="control-group"><%= form.textfield "component_id" %></td>
+    <td class="control-group"><%= form.checkbox "publish", {}, form.default_for("publish") %></td>
+    <td class="control-group">
+      <%= form.select "language", jsonmodel_definition(:digital_object_component).options_for(form, "language", true) %>
+    </td>
+
+    <!-- DATE -->
+    <td class="control-group">
+      <% form.push(form.set_index("dates[]", 0), begin digital_object_component["dates"][0] || {} rescue {} end) do %>
+        <%= form.select "label", jsonmodel_definition(:date).options_for(form, "label", true) %>
+      <% end %>
+    </td>
+    <td class="control-group">
+      <% form.push(form.set_index("dates[]", 0), begin digital_object_component["dates"][0] || {} rescue {} end) do %>
+        <%= form.textfield "expression" %>
+      <% end %>
+    </td>
+    <td class="control-group">
+      <% form.push(form.set_index("dates[]", 0), begin digital_object_component["dates"][0] || {} rescue {} end) do %>
+        <%= form.select "date_type", jsonmodel_definition(:date).options_for(form, "date_type", true) %>
+      <% end %>
+      <% form.push("dates", begin digital_object_component["dates"] || [] rescue [] end) do %>
+        <span id="<%= form.id_for(nil) %>"></span>
+      <% end %>
+    </td>
+    <td class="control-group">
+      <% form.push(form.set_index("dates[]", 0), begin digital_object_component["dates"][0] || {} rescue {} end) do %>
+        <%= form.textfield "begin" %>
+      <% end %>
+    </td>
+    <td class="control-group">
+      <% form.push(form.set_index("dates[]", 0), begin digital_object_component["dates"][0] || {} rescue {} end) do %>
+        <%= form.textfield "end" %>
+      <% end %>
+    </td>
+
+    <!-- NOTES -->
+    <td class="control-group">
+      <% form.push(form.set_index("notes[]", 0), begin digital_object_component["notes"][0] || {} rescue {} end) do %>
+        <%= form.select("type", [""].concat(note_types_for("digital_object_component").map {|value, hash| [hash[:i18n], value]}.sort{|a, b| a[0] <=> b[0]})) %>
+        <%= form.hidden_input "jsonmodel_type", "note_digital_object" %>
+      <% end %>
+    </td>
+    <td class="control-group">
+      <% form.push(form.set_index("notes[]", 0), begin digital_object_component["notes"][0] || {} rescue {} end) do %>
+        <% form.push(form.set_index("content[]", 0), begin form["content"][0] || "" rescue "" end) do %>
+          <%= form.textfield nil, form.obj %>
+        <% end %>
+        <% form.push("content", begin digital_object_component["content"] || [] rescue [] end) do %>
+          <span id="<%= form.id_for(nil) %>"></span>
+        <% end %>
+        <% form.push(form.set_index("subnotes[]", 0), []) do %>
+          <span id="<%= form.id_for("content") %>"></span>
+        <% end %>
+      <% end %>
+    </td>
+    <td class="control-group">
+      <% form.push(form.set_index("notes[]", 1), begin digital_object_component["notes"][1] || {} rescue {} end) do %>
+        <%= form.select("type", [""].concat(note_types_for("digital_object_component").map {|value, hash| [hash[:i18n], value]}.sort{|a, b| a[0] <=> b[0]})) %>
+        <%= form.hidden_input "jsonmodel_type", "note_digital_object" %>
+      <% end %>
+    </td>
+    <td class="control-group">
+      <% form.push(form.set_index("notes[]", 1), begin digital_object_component["notes"][1] || {} rescue {} end) do %>
+        <% form.push(form.set_index("content[]", 0), begin form["content"][0] || "" rescue "" end) do %>
+          <%= form.textfield nil, form.obj %>
+        <% end %>
+        <% form.push("content", begin digital_object_component["content"] || [] rescue [] end) do %>
+          <span id="<%= form.id_for(nil) %>"></span>
+        <% end %>
+        <% form.push(form.set_index("subnotes[]", 0), []) do %>
+          <span id="<%= form.id_for("content") %>"></span>
+        <% end %>
+      <% end %>
+    </td>
+    <td class="control-group">
+      <% form.push(form.set_index("notes[]", 2), begin digital_object_component["notes"][2] || {} rescue {} end) do %>
+        <%= form.select("type", [""].concat(note_types_for("digital_object_component").map {|value, hash| [hash[:i18n], value]}.sort{|a, b| a[0] <=> b[0]})) %>
+        <%= form.hidden_input "jsonmodel_type", "note_digital_object" %>
+      <% end %>
+    </td>
+    <td class="control-group">
+      <% form.push(form.set_index("notes[]", 2), begin digital_object_component["notes"][2] || {} rescue {} end) do %>
+        <% form.push(form.set_index("content[]", 0), begin form["content"][0] || "" rescue "" end) do %>
+          <%= form.textfield nil, form.obj %>
+        <% end %>
+        <% form.push("content", begin digital_object_component["content"] || [] rescue [] end) do %>
+          <span id="<%= form.id_for(nil) %>"></span>
+        <% end %>
+        <% form.push(form.set_index("subnotes[]", 0), []) do %>
+          <span id="<%= form.id_for("content") %>"></span>
+        <% end %>
+      <% end %>
+    </td>
+
+
     <td class="control-group">
       <div class="btn-group">
         <button class="btn btn-success add-row"><span class="icon-plus icon-white"></span></button>
@@ -22,11 +122,12 @@
   </tr>
 <% end %>
 
+<%= stylesheet_link_tag "jquery.kiketable.colsizable.css" %>
 <%= stylesheet_link_tag "archivesspace/rde" %>
 <div class="rde-wrapper">
   <div class="modal-body">
-    <%= form_for @archival_record_children, :as => :archival_record_children, :url => {:controller => @parent.jsonmodel_type.pluralize, :action => :add_children, :id => @parent.id}, :html => {:class => 'form-horizontal aspace-record-form', :id => 'rde_form', "data-error-prefix" => I18n.t("rde.messages.error_prefix"), "data-validate-row-uri" => url_for(:controller => :digital_object_components, :action => :validate_rows), "data-exceptions" => @exceptions.to_json} do |f| %>
-      <%= form_context :archival_record_children, @archival_record_children do |form| %>
+    <%= form_for @children, :as => @children.class.record_type, :url => {:controller => @parent.jsonmodel_type.pluralize, :action => :add_children, :id => @parent.id}, :html => {:class => 'form-horizontal aspace-record-form', :id => 'rde_form', "data-error-prefix" => I18n.t("rde.messages.error_prefix"), "data-validate-row-uri" => url_for(:controller => :digital_object_components, :action => :validate_rows), "data-exceptions" => @exceptions.to_json, "data-cookie-prefix" => "digi"} do |f| %>
+      <%= form_context @children.class.record_type, @children do |form| %>
 
         <%= render :partial => "shared/flash_messages", :locals => {:form => form} %>
 
@@ -126,6 +227,8 @@
           <colgroup>
             <col class="status" data-default-width='24' />
             <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />
             <col class="fieldset-col" data-default-width='70' />
             <col class="fieldset-col" data-default-width='150' />
             <col class="fieldset-col" data-default-width='150' />
@@ -133,15 +236,14 @@
             <col class="fieldset-col" data-default-width='150' />
             <col class="fieldset-col" data-default-width='150' />
             <col class="fieldset-col" data-default-width='150' />
+            <!--
             <col class="fieldset-col" data-default-width='150' />
             <col class="fieldset-col" data-default-width='150' />
             <col class="fieldset-col" data-default-width='150' />
             <col class="fieldset-col" data-default-width='150' />
             <col class="fieldset-col" data-default-width='150' />
             <col class="fieldset-col" data-default-width='150' />
-            <col class="fieldset-col" data-default-width='150' />
-            <col class="fieldset-col" data-default-width='150' />
-            <col class="fieldset-col" data-default-width='150' />
+            <col class="fieldset-col" data-default-width='150' />            -->
             <col class="fieldset-col" data-default-width='150' />
             <col class="fieldset-col" data-default-width='150' />
             <col class="fieldset-col" data-default-width='150' />
@@ -153,16 +255,35 @@
           <thead>
           <tr class="sections">
             <th data-id="empty" colspan="1"></th>
+            <th data-id="basic" colspan="5"><%= I18n.t("rde.sections.basic_information") %></th>
+            <th data-id="date" colspan="5" class="conditionally-required"><%= I18n.t("rde.sections.date") %></th>
+            <th data-id="note" colspan="6"><%= I18n.t("rde.sections.notes") %></th>
             <th data-id="empty" colspan="1"></th>
           </tr>
           <tr class="fieldset-labels">
             <th id="colStatus" data-section="empty" />
+            <th id="colLabel" class="fieldset-label conditionally-required sticky" data-section="basic"><%= I18n.t("digital_object_component.label") %></th>
+            <th id="colTitle" class="fieldset-label conditionally-required sticky" data-section="basic"><%= I18n.t("digital_object_component.title") %></th>
+            <th id="colCompId" class="fieldset-label sticky" data-section="basic"><%= I18n.t("digital_object_component.component_id") %></th>
+            <th id="colPublish" class="fieldset-label sticky" data-section="basic"><%= I18n.t("digital_object_component.publish") %></th>
+            <th id="colLang" class="fieldset-label sticky" data-section="basic"><%= I18n.t("digital_object_component.language") %></th>
+            <th id="colDLabel" class="fieldset-label sticky" data-section="date"><%= I18n.t("date.label") %></th>
+            <th id="colExpr" class="fieldset-label sticky" data-section="date"><%= I18n.t("date.expression") %></th>
+            <th id="colDType" class="fieldset-label sticky" data-section="date"><%= I18n.t("rde.date_type") %></th>
+            <th id="colDBegin" class="fieldset-label sticky" data-section="date"><%= I18n.t("date.begin") %></th>
+            <th id="colDEnd" class="fieldset-label sticky" data-section="date"><%= I18n.t("date.end") %></th>
+            <th id="colNType1" class="fieldset-label" data-section="note"><%= I18n.t("note._singular") %> 1</th>
+            <th id="colNCont1" class="fieldset-label" data-section="note"><%= I18n.t("note_attributes.content") %> 1</th>
+            <th id="colNType2" class="fieldset-label" data-section="note"><%= I18n.t("note._singular") %> 2</th>
+            <th id="colNCont2" class="fieldset-label" data-section="note"><%= I18n.t("note_attributes.content") %> 2</th>
+            <th id="colNType3" class="fieldset-label" data-section="note"><%= I18n.t("note._singular") %> 3</th>
+            <th id="colNCont3" class="fieldset-label" data-section="note"><%= I18n.t("note_attributes.content") %> 3</th>
             <th id="colActions" data-section="empty"></th>
           </tr>
           </thead>
           <tbody>
-            <% if @archival_record_children.children.length > 0 %>
-              <% @archival_record_children.children.each_with_index do |child, idx|
+            <% if @children.children.length > 0 %>
+              <% @children.children.each_with_index do |child, idx|
                   form.push(form.set_index("children[]", idx), child) do %>
                     <%= form.emit_template("rde_row", child) %>
                 <% end
