--- a/frontend/app/views/shared/_pagination_summary.html.erb
+++ b/frontend/app/views/shared/_pagination_summary.html.erb
@@ -2,15 +2,61 @@
   <div class="pull-left">
     <%= I18n.t "pagination.summary_prefix" %> <strong><%= @search_data["offset_first"] %></strong> <%= I18n.t "pagination.summary_offset_connector" %> <strong><%= @search_data["offset_last"] %></strong> <%= I18n.t "pagination.summary_total_connector" %> <strong><%= @search_data["total_hits"] %></strong> <%= I18n.t "pagination.summary_suffix" %>
   </div>
+  <% if @search_data.sorted? %>
+    <div class="pull-right" style="position: relative">
+      <span class="input-append">
+        <label style="float: left;">&#160;<%= I18n.t("search_sorting.and") %>&#160;</label>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+          <span class="inset-label"><%= @search_data.sorted_by_label(title_sort_label, 1) %></span>
+          <span class="btn btn-mini last"><span class="caret"></span></span>
+        </a>
+        <ul class="dropdown-menu pull-right">
+          <% if @search_data.weightable? %>
+            <li><%= link_to I18n.t("search_sorting.relevance"), build_search_params("sort2" => "") %></li>
+          <% end %>
+          <% if show_title_column? && !@search_data.sorted_by?('title_sort') %>
+            <li class="dropdown-submenu pull-left">
+              <%= link_to title_sort_label, build_search_params("sort2" => @search_data.sort_filter_for("title_sort")) %>
+                <ul class="dropdown-menu">
+                  <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort2" => "title_sort asc") %></li>
+                  <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort2" => "title_sort desc") %></li>
+              </ul>
+            </li>
+          <% end %>
+          <% if !@search_data.sorted_by?('create_time') %>
+            <li class="dropdown-submenu pull-left">
+              <%= link_to I18n.t("search_sorting.create_time"), build_search_params("sort2" => @search_data.sort_filter_for("create_time", "desc")) %>
+              <ul class="dropdown-menu">
+                <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort2" => "create_time asc") %></li>
+                <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort2" => "create_time desc") %></li>
+              </ul>
+            </li>
+          <% end %>
+          <% if !@search_data.sorted_by?('user_mtime') %>
+            <li class="dropdown-submenu pull-left">
+              <%= link_to I18n.t("search_sorting.user_mtime"), build_search_params("sort2" => @search_data.sort_filter_for("user_mtime", "desc")) %>
+              <ul class="dropdown-menu">
+                <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort2" => "user_mtime asc") %></li>
+                <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort2" => "user_mtime desc") %></li>
+              </ul>
+            </li>
+          <% end %>
+        </ul>
+      </span>
+    </div>
+  <% end %>
+
   <div class="pull-right" style="position: relative">
-    <%= I18n.t("search_sorting.sort_by") %>
     <span class="input-append">
+      <label style="float: left;"><%= I18n.t("search_sorting.sort_by") %>&#160;</label>
       <a class="dropdown-toggle" data-toggle="dropdown" href="#">
         <span class="inset-label"><%= @search_data.sorted_by_label(title_sort_label) %></span>
         <span class="btn btn-mini last"><span class="caret"></span></span>
       </a>
       <ul class="dropdown-menu pull-right">
-        <li><%= link_to I18n.t("search_sorting.relevance"), build_search_params("sort" => "") %></li>
+        <% if @search_data.weightable? %>
+          <li><%= link_to I18n.t("search_sorting.relevance"), build_search_params("sort" => "") %></li>
+        <% end %>
         <% if show_title_column? %>
           <li class="dropdown-submenu pull-left">
             <%= link_to title_sort_label, build_search_params("sort" => @search_data.sort_filter_for("title_sort")) %>
@@ -36,5 +82,5 @@
         </li>
       </ul>
     </span>
-  </div>
+ </div>
 <% end %>
