--- a/frontend/app/views/shared/_pagination_summary.html.erb
+++ b/frontend/app/views/shared/_pagination_summary.html.erb
@@ -23,24 +23,17 @@
               </ul>
             </li>
           <% end %>
-          <% if !@search_data.sorted_by?('create_time') %>
-            <li class="dropdown-submenu pull-left">
-              <%= link_to I18n.t("search_sorting.create_time"), build_search_params("sort2" => @search_data.sort_filter_for("create_time", "desc")) %>
-              <ul class="dropdown-menu">
-                <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort2" => "create_time asc") %></li>
-                <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort2" => "create_time desc") %></li>
-              </ul>
-            </li>
-          <% end %>
-          <% if !@search_data.sorted_by?('user_mtime') %>
-            <li class="dropdown-submenu pull-left">
-              <%= link_to I18n.t("search_sorting.user_mtime"), build_search_params("sort2" => @search_data.sort_filter_for("user_mtime", "desc")) %>
-              <ul class="dropdown-menu">
-                <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort2" => "user_mtime asc") %></li>
-                <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort2" => "user_mtime desc") %></li>
-              </ul>
-            </li>
-          <% end %>
+          <% @search_data.sort_fields.each do |field| %>
+            <% if !@search_data.sorted_by?(field) %>
+              <li class="dropdown-submenu pull-left">
+                <%= link_to I18n.t("search_sorting.#{field}"), build_search_params("sort2" => @search_data.sort_filter_for(field, "desc")) %>
+                <ul class="dropdown-menu">
+                  <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort2" => "#{field} asc") %></li>
+                  <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort2" => "{field desc") %></li>
+                </ul>
+             </li>
+           <% end %>
+         <% end %>
         </ul>
       </span>
     </div>
@@ -66,20 +59,15 @@
             </ul>
           </li>
         <% end %>
-        <li class="dropdown-submenu pull-left">
-          <%= link_to I18n.t("search_sorting.create_time"), build_search_params("sort" => @search_data.sort_filter_for("create_time", "desc")) %>
-          <ul class="dropdown-menu">
-            <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort" => "create_time asc") %></li>
-            <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort" => "create_time desc") %></li>
-          </ul>
-        </li>
-        <li class="dropdown-submenu pull-left">
-          <%= link_to I18n.t("search_sorting.user_mtime"), build_search_params("sort" => @search_data.sort_filter_for("user_mtime", "desc")) %>
-          <ul class="dropdown-menu">
-            <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort" => "user_mtime asc") %></li>
-            <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort" => "user_mtime desc") %></li>
-          </ul>
-        </li>
+        <% @search_data.sort_fields.each do |field| %>
+          <li class="dropdown-submenu pull-left">
+            <%= link_to I18n.t("search_sorting.#{field}"), build_search_params("sort" => @search_data.sort_filter_for(field, "desc")) %>
+            <ul class="dropdown-menu">
+              <li><%= link_to I18n.t("search_sorting.asc"), build_search_params("sort" => "#{field} asc") %></li>
+              <li><%= link_to I18n.t("search_sorting.desc"), build_search_params("sort" => "{field desc") %></li>
+            </ul>
+          </li>
+        <% end %>
       </ul>
     </span>
  </div>
