--- a/public/app/views/records/_notes.html.erb
+++ b/public/app/views/records/_notes.html.erb
@@ -75,11 +75,17 @@
 <% note_renderers['note_index'] = lambda do | note | %>
   <dl>
     <% Array(note['items']).each do |index_item| %>
-      <dt><%= index_item['value'] %></dt>
       <% if index_item['reference_ref'] %>
-        <dd><a href="<%= AppConfig[:public_prefix].gsub(/\/$/, "") %><%= index_item['reference_ref']['ref'] %>"><%= index_item['reference_text'] %></a></dd>
+        <% if index_item['reference_text'] %>
+          <dt><%= index_item['value'] %></dt>
+            <dd><a href="<%= AppConfig[:public_prefix].gsub(/\/$/, "") %><%= index_item['reference_ref']['ref'] %>"><%= index_item['reference_text'] %></a></dd>
+        <% else %>
+          <dt><a href="<%= AppConfig[:public_prefix].gsub(/\/$/, "") %><%= index_item['reference_ref']['ref'] %>"><%= index_item['value'] %></a></dt>
+        <% end %>
       <% else %>
-        <dd><%= index_item['reference_text'] %></dd>
+        <dt><%= index_item['value'] %></dt>
+          <dd><%= index_item['reference'] %></dd>
+          <dd><%= index_item['reference_text'] %></dd>
       <% end %>
     <% end %>
   </dl>
