--- a/plugins/lcnaf/frontend/views/lcnaf/index.html.erb
+++ b/plugins/lcnaf/frontend/views/lcnaf/index.html.erb
@@ -10,7 +10,7 @@
           <%= render :partial => "shared/flash_messages" %>
 
           <%= form_tag({:controller => :lcnaf, :action => :search}, {:id => "lcnaf_search", :class => "form-search", :method => "GET"}) do |form| %>
-            <input type="text" name="query" class="input-large">
+            <input type="text" name="query" id="search-query" class="input-large">
             <button type="submit" class="btn btn-primary">
               <%= image_tag "archivesspace/btn-busy.gif", :class=>"btn-busy-icon" %>
               <%= I18n.t("plugins.lcnaf.actions.search") %>
