Fix sticky columns for DO RDE

--- a/frontend/app/views/digital_object_components/_rde.html.erb
+++ b/frontend/app/views/digital_object_components/_rde.html.erb
@@ -348,9 +348,9 @@
             <th id="colFShow" class="fieldset-label sticky" data-section="file"><%= I18n.t("file_version.xlink_show_attribute") %></th>
             <th id="colFFormat" class="fieldset-label sticky" data-section="file"><%= I18n.t("file_version.file_format_name") %></th>
             <th id="colFVersion" class="fieldset-label sticky" data-section="file"><%= I18n.t("file_version.file_format_version") %></th>
-            <th id="colFSize" class="fieldset-label sticky" data-section="file"><%= I18n.t("file_version.file_size_bytes") %></th>
+            <th id="colFSize" class="fieldset-label" data-section="file"><%= I18n.t("file_version.file_size_bytes") %></th>
             <th id="colFCSum" class="fieldset-label" data-section="file"><%= I18n.t("file_version.checksum") %></th>
-            <th id="colFCSumM" class="fieldset-label" data-section="file"><%= I18n.t("file_version.checksum_method") %></th>
+            <th id="colFCSumM" class="fieldset-label sticky" data-section="file"><%= I18n.t("file_version.checksum_method") %></th>
 
             <th id="colNType1" class="fieldset-label" data-section="note"><%= I18n.t("note._singular") %> 1</th>
             <th id="colNCont1" class="fieldset-label" data-section="note"><%= I18n.t("note_attributes.content") %> 1</th>
