--- a/frontend/app/views/digital_objects/_sidebar.html.erb
+++ b/frontend/app/views/digital_objects/_sidebar.html.erb
@@ -17,5 +17,6 @@
     <%= sidebar.render_for_view_and_edit(:subrecord_type => 'external_document', :property => 'external_documents') %>
     <%= sidebar.render_for_view_and_edit(:subrecord_type => 'rights_statement', :property => 'rights_statements') %>
     <%= sidebar.render_for_view_and_edit(:subrecord_type => 'collection_management', :property => 'collection_management') %>
+    <%= sidebar.render_for_view_only(:subrecord_type => 'linked_event', :property => 'linked_events') %>
     <%= sidebar.render_for_view_and_edit(:subrecord_type => 'user_defined', :property => 'user_defined') %>
 <% end %>
