--- a/frontend/app/views/archival_objects/_sidebar.html.erb
+++ b/frontend/app/views/archival_objects/_sidebar.html.erb
@@ -13,4 +13,5 @@
     <%= sidebar.render_for_view_and_edit(:subrecord_type => 'external_document', :property => 'external_documents') %>
     <%= sidebar.render_for_view_and_edit(:subrecord_type => 'rights_statement', :property => 'rights_statements') %>
     <%= sidebar.render_for_view_and_edit(:subrecord_type => 'instance', :property => 'instances') %>
+    <%= sidebar.render_for_view_only(:subrecord_type => 'linked_event', :property => 'linked_events') %>
 <% end %>
