--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -50,6 +50,8 @@
           <%= render :partial => "rights_statements/show", :locals => { :rights_statements => digital_object_component.rights_statements, :section_id => "digital_object_component_rights_statements_"  } %>
         <% end %>
 
+        <%= render :partial => "linked_events/show", :locals => { :linked_events => digital_object_component.linked_events, :context => readonly, :section_id => "digital_object_component_linked_events_" } %>
+
         <%= show_plugins_for(@digital_object_component, readonly) %>
 
       <% end %>
