--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -101,6 +101,8 @@
           <%= render :partial => "classification/show", :locals => { :classification => @resource.classification, :context => readonly, :section_id => "resource_classification_" } %>
         <% end %>
 
+        <%= render :partial => "linked_events/show", :locals => { :linked_events => @resource.linked_events, :context => readonly, :section_id => "resource_linked_events_" } %>
+
         <% if @resource.user_defined %>
           <%= render :partial => "user_defined/show", :locals => { :user_defined => @resource.user_defined, :context => readonly, :section_id => "resource_user_defined_" } %>
         <% end %>
