--- a/frontend/app/views/events/_record_linker.html.erb
+++ b/frontend/app/views/events/_record_linker.html.erb
@@ -20,7 +20,7 @@
              data-selected="<%= selected_json %>"
              data-multiplicity="one"
              data-format_template="title"
-             data-types='["accession", "resource", "digital_object"]'
+             data-types='["accession", "resource", "digital_object", "archival_object", "digital_object_component"]'
       />
       <div class="btn-group dropdown pull-right">
         <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
